Bug 814723 - Don't warn about missing 'browser.newtab.url' in nsDocShell. r=jlebar

The preference key 'browser.newtab.url' is only supported for the browser,
and undefined on all other targets; such as mobile or b2g. For those targets
the function 'nsDocShell::ShouldAddToSessionHistory' warns about the missing
key.

This patch silences this warning by making Gecko return a default value of
'true' if the key is not present in the preferences.